quick fix on mobile.css

--- a/assembl/static/css/_mobile.scss
+++ b/assembl/static/css/_mobile.scss
@@ -35,9 +35,8 @@ $panelHeaderTitleHeight:50px;
     body{
         overflow:hidden;
     }
-    
     #wrapper{
-        overflow:auto;
+        overflow:hidden;
     }
     .grid-pad{
         padding-top:10px;
